--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Healme</string>
     <string name="title_activity_apotek_location">Map</string>
+    <string name="home">Home</string>
+    <string name="search">Search</string>
+    <string name="scan">Scan</string>
 </resources>
