--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="headache">Headache</string>
     <string name="see_all">See All</string>
     <string name="apotek">Apotek</string>
+    <string name="obat">Obat</string>
 </resources>
